# persistent-sqlite-ld-fail

./: README.md  ldfail.cabal
app/: Main.hs
