name:                ldfail
version:             0.1.0.0
synopsis:            minimal code to reproduce ldscript bug
description:         Please see README.md
homepage:            http://github.com/rubenmoor/persistent-sqlite-ld-fail
license:             BSD3
license-file:        LICENSE
author:              Ruben Moor
maintainer:          ruben.moor@gmail.com
-- copyright:           
category:            Development
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable ldfail
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rubenmoor/persistent-sqlite-ld-fail
